<resources>
    <string name="sip_settings">Internet calls</string>
    <string name="sip_accounts">Internet calling (SIP) accounts</string>
    <string name="sip_accounts_title">Accounts</string>
    <string name="sip_receive_calls">Receive internet calls</string>
    <string name="sip_receive_calls_summary">Uses more battery power</string>
    <string name="sip_call_options_title">Use Internet calling</string>
    <string name="sip_call_options_wifi_only_title">Use SIP calling (Wi-Fi only)</string>
    <string name="apn_settings">Access Point Names</string>
    <string name="voicemail">Voicemail</string>
    <string name="networks">Network operators</string>
    <string name="additional_gsm_call_settings">More settings</string>
    <string name="labelCallerId">Show my caller ID</string>
    <string name="sum_default_caller_id">Show my number in outgoing calls according to the default operator settings.</string>
    <string name="labelCW">Call waiting</string>
    <string name="sum_cw_enabled">Receive incoming call alerts during calls.</string>
    <string name="sum_cw_disabled">Receive incoming call alerts during calls.</string>
    <string name="labelCF">Call forwarding</string>
    <string name="labelCF_summary">Select when to forward incoming calls</string>
    <string name="mobile_networks">Mobile networks</string>
    <string name="search_networks">Search networks</string>
    <string name="sum_carrier_select">Select a network operator</string>
    <string name="sum_search_networks">Scan for all available networks</string>
    <string name="select_automatically">Select automatically</string>
    <string name="sum_select_automatically">Automatically select preferred network</string>
    <string name="preferred_network_mode_title">Network mode</string>
    <string name="preferred_network_mode_summary">Change Network operating mode</string>
    <string name="preferred_network_mode_dialogtitle">Preferred network mode</string>
    <string name="data_enable_summary">Enable data access over mobile network</string>
    <string name="roaming">Data roaming</string>
    <string name="roaming_enable">Connect to data services when roaming</string>
    <string name="roaming_enable_kor">Using mobile data while roaming may result in additional charges.</string>
    <string name="fdn">Fixed Dialling Numbers</string>
    <string name="tty_mode_option_title">TTY mode</string>
    <string name="tty_mode_option_summary">Set TTY mode</string>
    <string name="hac_mode_title">Hearing aids</string>
    <string name="hac_mode_summary">Improve the sound quality of your device, for use with hearing aids.</string>
    <string name="reject_call_with_msg">Reject calls with messages</string>
    <string name="callsettings_autoreject_autorejectnumbers">Auto reject numbers</string>
    <string name="callsettings_autoreject_list_title">Auto reject list</string>
    <string name="callsettings_autoreject_list_summary">Manage auto reject numbers.</string>
    <string name="callsettings_autoreject_category">Auto reject</string>
    <string name="callsettings_autoreject_mode_title">Auto reject mode</string>
    <string name="callsettings_reject_messages_title">Call-reject messages</string>
    <string name="callsettings_reject_messages_summary">Compose or edit response messages to send when rejecting incoming calls.</string>
    <string name="callsettings_answering_key_title">Pressing the Home key</string>
    <string name="callsettings_PowerkeyEndsCalls_title">Pressing the Power key</string>
    <string name="callsettings_voice_cmd_title">Using voice commands</string>
    <string name="callsettings_voice_cmd_summary">Say \"Answer\" or \"Reject\" to answer or reject calls with your voice.</string>
    <string name="callsettings_answering_accessibility_tapping_title">Answer calls by tapping</string>
    <string name="callsettings_answering_accessibility_tapping_summary">Accept incoming calls by tapping the accept call button on the incoming call screen</string>
    <string name="callsettings_answering_accessibility_headtracking_title">Answers calls using head tracking</string>
    <string name="callsettings_answering_accessibility_headtracking_summary">Accept incoming calls by tracking the head movement</string>
    <string name="callsettings_answering_call_in_external_screen_title">Answer/end a calls using the outer screen</string>
    <string name="callsettings_answering_call_in_external_screen_summary">Answer/end calls without opening the device by using the outer screen.</string>
    <string name="callsettings_category_answering">Answer calls by</string>
    <string name="callsettings_category_ending">End calls by</string>
    <string name="callsettings_areacode_title">Auto area code</string>
    <string name="callsettings_areacode_summary_off">Automatically add an area code to the number display panel.</string>
    <string name="callsettings_autoredial_title">Auto redial</string>
    <string name="callsettings_autoredial_summary">Automatically redial if calls cannot connect or if they are disconnected.</string>
    <string name="callsettings_subaddress_title">Subaddress</string>
    <string name="callsettings_subaddress_summary">Enable subaddress using asterisk character in number</string>
    <string name="callsettings_call_barring">Call barring</string>
    <string name="roaming_settings">Roaming settings</string>
    <string name="data_usage_title">Mobile data</string>
    <string name="preferred_networks_title">Preferred Networks</string>
    <string name="preferred_networks_index">Network index</string>
    <string name="preferred_networks_name">Network name</string>
    <string name="preferred_networks_id">Network ID</string>
    <string name="preferred_networks_act_mode">ACT Mode</string>
    <string name="preferred_networks_act_gsm">GSM ACT</string>
    <string name="preferred_networks_act_gsm_use">Use GSM ACT</string>
    <string name="preferred_networks_act_gsm_compact">GSM Compact ACT</string>
    <string name="preferred_networks_act_gsm_compact_use">Use GSM compact ACT</string>
    <string name="preferred_networks_act_utran">UTRAN ACT</string>
    <string name="preferred_networks_act_utran_use">Use UTRAN ACT</string>
    <string name="preferred_networks_act_eutran">E-UTRAN ACT</string>
    <string name="preferred_networks_act_eutran_use">Use E-UTRAN ACT</string>
    <string name="loading">Loading...</string>
    <string name="global_data_roaming_access">Data Roaming Access</string>
    <string name="global_data_roaming_access_summary">Connect to data services while roaming</string>
    <string name="status_roaming">Roaming</string>
    <string name="device_info_not_available">Not available</string>
    <string name="status_signal_strength">Signal strength</string>
    <string name="automatic_connections_summary">Intelligent Mobile Network and Wi-Fi Settings</string>
    <string name="sprint_connections_optimizer">Connections optimizer</string>
    <string name="international_data_roaming">International Data Roaming</string>
    <string name="standard_data">Standard Data</string>
    <string name="standard_data_summary">Turn on mobile data such as email, web browsing and push notifications over the cellular network.</string>
    <string name="enhanced_4glte_services">Enhanced 4G LTE services</string>
    <string name="enhanced_4glte_services_summary">Turn on HD Voice and enhanced communications over the cellular network where available.</string>
    <string name="enhanced_4glte_video_call">Video Call</string>
    <string name="enhanced_4glte_video_call_summary">Allow AT&amp;T Video Call. Voice and data charges may apply.</string>
    <string name="user_capabilities_exchange">User capabilities exchange</string>
    <string name="user_capabilities_exchange_summary">Turn on device capability exchange or discovery via presence.</string>
    <string name="international_data">International Data</string>
    <string name="international_data_summary">Turn on mobile data such as email, web browsing, and push notifications over the cellular network when roaming outside the U.S., Puerto Rico and USVI. International roaming data charges will apply.</string>
    <string name="enhanced_4glte_services_roaming_summary">Turn on HD Voice and enhanced communications over the cellular network (where available) when roaming outside the U.S., Puerto Rico and USVI. International roaming data charges will apply.</string>
    <string name="voice_over_lte_title">VoLTE Call</string>
    <string name="volte_call_summary">Enable enhanced communication using LTE data.</string>
    <string name="callsettings_open_folder_title">Open folder to answer</string>
    <string name="callsettings_open_folder_summary">Answer calls by opening folder.</string>
    <string name="gesture_callaccept_setting_title">Waving hand over device</string>
    <string name="callsettings_answering_service_setting">Voicemail</string>
    <string name="callsettings_callforwarding_service_setting">Call forwarding</string>
    <string name="callsettings_all_setting">All roaming functions</string>
    <string name="callsettings_active_voice_mailbox">Enable Voicemail</string>
    <string name="callsettings_deactivate_voicemail">Disable Voicemail</string>
    <string name="callsettings_play_voicemail_message">Play voicemail messages</string>
    <string name="callsettings_full_forwarding">Enable Call forwarding</string>
    <string name="callsettings_deactivate_forwarding">Disable call forwarding</string>
    <string name="callsettings_deactivate_all_setting">Disable all roaming functions</string>
    <string name="request_nubmer_service_kdi">Block withheld numbers</string>
    <string name="unwanted_calls_revention_kdi">Prevent unwanted calls</string>
    <string name="change_guide_language_kddi">Change guide language</string>
    <string name="apply_option_service_kddi">Go to %s service options</string>
    <string name="operator_info_not_available">Operator info is not available</string>
    <string name="roaming_network_select_title_skt">Select network</string>
    <string name="roaming_network_select_title_lgt">Select roaming network</string>
    <string name="current_roaming_network_lgt">Current service provider</string>
    <string name="roaming_network_area_select_lgt">Select service provider</string>
    <string name="roaming_network_select_auto_summary">Automatically select a service provider according to the condition of the service provider networks.</string>
    <string name="roaming_provider_zone1">Zone 1</string>
    <string name="roaming_provider_zone2">Zone 2</string>
    <string name="roaming_provider_zone3">Zone 3</string>
    <string name="roaming_provider_zone4">Zone 4</string>
    <string name="roaming_network_select_first_carrier_summary">Connect to networks provided by your service provider.</string>
    <string name="roaming_network_select_carrier_alliances_summary">"Connect to networks provided by your service provider's partners."</string>
    <string name="unknown_operator">Unknown</string>
    <string name="roaming_network_select_manually">Select carrier manually</string>
    <string name="app_label">Mobile networks</string>
    <string name="data_enabled">Data network settings</string>
    <string name="roaming_disable">Using mobile data while roaming may result in additional charges.</string>
    <string name="roaming_use_lte_roaming">LTE roaming</string>
    <string name="data_network_mode_settings">Network mode</string>
    <string name="data_network_mode_settings_summary">Select whether to use LTE and/or 3G networks.</string>
    <string name="network_status_settings">Status bar indicator</string>
    <string name="network_status_settings_summary">Select the network information to be shown on the status bar.</string>
    <string name="current_operator_kor">Current network</string>
    <string name="select_manually_kor">Select manually</string>
</resources>