<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/app_label"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:persistent="false" android:title="@string/data_enabled" android:key="button_data_enabled_key" android:summary="@string/data_enable_summary" />
    <SwitchPreference android:persistent="false" android:title="@string/data_enabled" android:key="button_data_enabled_key" android:summary="@string/data_enable_summary" />
    <CheckBoxPreference android:persistent="false" android:title="@string/roaming" android:key="button_roaming_key" android:summaryOn="@string/roaming_enable_kor" android:summaryOff="@string/roaming_disable" />
    <SwitchPreference android:persistent="false" android:title="@string/roaming" android:key="button_roaming_key" android:summaryOn="@string/roaming_enable_kor" android:summaryOff="@string/roaming_disable" />
    <CheckBoxPreference android:persistent="false" android:title="@string/roaming_use_lte_roaming" android:key="button_lte_roaming_key" />
    <PreferenceScreen android:persistent="false" android:title="@string/apn_settings" android:key="button_apn_key" />
    <PreferenceScreen android:persistent="false" android:title="@string/networks" android:key="button_carrier_sel_key" android:summary="@string/sum_carrier_select">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.NetworkSetting" />
    </PreferenceScreen>
    <PreferenceScreen android:persistent="false" android:title="@string/data_network_mode_settings" android:key="button_data_network_mode_key" android:summary="@string/data_network_mode_settings_summary">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.mobilenetworks.kor.DataNetworkMode" />
    </PreferenceScreen>
    <ListPreference android:persistent="false" android:entries="@array/network_status_entries" android:title="@string/network_status_settings" android:key="button_network_status_key" android:summary="@string/network_status_settings_summary" android:entryValues="@array/network_status_values" />
</PreferenceScreen>