<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/callsettings_answering_service_setting" />
    <PreferenceScreen android:persistent="false" android:title="@string/callsettings_active_voice_mailbox" android:key="button_active_voice_mailbox" />
    <PreferenceScreen android:persistent="false" android:title="@string/callsettings_deactivate_voicemail" android:key="button_deactivate_voicemail" />
    <PreferenceScreen android:persistent="false" android:title="@string/callsettings_play_voicemail_message" android:key="button_play_voicemail_message" />
    <PreferenceCategory android:title="@string/callsettings_callforwarding_service_setting" />
    <PreferenceScreen android:persistent="false" android:title="@string/callsettings_full_forwarding" android:key="button_full_forwarding" />
    <PreferenceScreen android:persistent="false" android:title="@string/callsettings_deactivate_forwarding" android:key="button_deactivate_forwarding" />
    <PreferenceCategory android:title="@string/callsettings_all_setting" />
    <PreferenceScreen android:persistent="false" android:title="@string/callsettings_deactivate_all_setting" android:key="button_deactivate_all_setting" />
</PreferenceScreen>