<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:persistent="false" android:title="@string/callsettings_autoreject_category" android:key="black_list_preference_category">
        <PreferenceScreen android:title="@string/callsettings_autoreject_mode_title" android:key="autoreject_mode_preference_key" android:summary="@string/callsettings_autoreject_autorejectnumbers" android:defaultValue="true" />
        <PreferenceScreen android:title="@string/callsettings_autoreject_list_title" android:key="black_list_preference" android:summary="@string/callsettings_autoreject_list_summary" android:fragment="com.android.phone.callsettings.SecAutoRejectList" />
        <PreferenceScreen android:title="@string/unwanted_calls_revention_kdi" android:key="network_black_list_kddi_preference" android:fragment="com.android.phone.callsettings.KddiCallPrevention" />
        <SwitchPreference android:title="@string/request_nubmer_service_kdi" android:key="request_nubmer_service_kddi_preference" />
    </PreferenceCategory>
    <PreferenceCategory android:persistent="false" android:title="@string/reject_call_with_msg" android:key="reject_message_preference_category">
        <PreferenceScreen android:title="@string/callsettings_reject_messages_title" android:key="reject_message_preference" android:summary="@string/callsettings_reject_messages_summary" android:fragment="com.android.phone.callsettings.SecRejectCallWithMsg" />
    </PreferenceCategory>
</PreferenceScreen>